# buildenv

./: .gitignore  Dockerfile  Dockerfile.base  Dockerfile.linux-aarch64  Dockerfile.linux-amd64  Dockerfile.windows-amd64  LICENSE  README.md  Toolchain-mingw.cmake  build-containers  build.sh  entrypoint.sh
.github/workflows/: autorelease.yaml  build-and-release.yml
test-project/: CMakeLists.txt  CMakePresets.json  README.md
test-project/src/: main.cpp
toolchains/: linux-aarch64.cmake  linux-amd64.cmake  windows-aarch64.cmake  windows-amd64.cmake
